--- a/Store/Base.lproj/Main.storyboard
+++ b/Store/Base.lproj/Main.storyboard
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11129.15" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="4Kz-Gk-ieP">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11103.10"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Store" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -21,6 +22,122 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="116" y="121"/>
+        </scene>
+        <!--Setting-->
+        <scene sceneID="k7e-AD-Sd8">
+            <objects>
+                <tableViewController id="0hd-dq-WDl" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="kJL-uu-sGo">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="eoo-MG-jz1">
+                                <frame key="frameInset" minY="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="eoo-MG-jz1" id="jQ0-EQ-a0a">
+                                    <frame key="frameInset" width="375" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="0hd-dq-WDl" id="Te2-mT-Cza"/>
+                            <outlet property="delegate" destination="0hd-dq-WDl" id="3kM-zM-vcH"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="Setting" id="0qs-9X-ek7"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="r42-xc-h8A" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1033" y="1155"/>
+        </scene>
+        <!--Setting-->
+        <scene sceneID="0bc-eV-Cgt">
+            <objects>
+                <viewController id="Cru-ed-QXM" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="YLP-9w-fYS"/>
+                        <viewControllerLayoutGuide type="bottom" id="8ci-bK-c1u"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="YxO-4u-MDM">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Setting" id="u3c-hf-gEL"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="b8R-P0-PyA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1839" y="1156"/>
+        </scene>
+        <!--Store2-->
+        <scene sceneID="Ozf-HL-9t0">
+            <objects>
+                <viewController id="y6R-Qf-b04" customClass="PAPWelcomeViewController" customModule="Store" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="6Ri-XN-awT"/>
+                        <viewControllerLayoutGuide type="bottom" id="yOa-dK-vsR"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="cr6-DR-8Xa">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Store2" id="Eug-wb-OuO"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QWp-ib-oTj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1838" y="446"/>
+        </scene>
+        <!--Store-->
+        <scene sceneID="9L7-St-WJf">
+            <objects>
+                <tableViewController id="JPw-wj-aV2" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="cBd-Kk-3AO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="s8t-QN-QZK">
+                                <frame key="frameInset" minY="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="s8t-QN-QZK" id="B8R-tO-ULX">
+                                    <frame key="frameInset" width="375" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="JPw-wj-aV2" id="MML-6c-wkY"/>
+                            <outlet property="delegate" destination="JPw-wj-aV2" id="L4O-0w-Ga1"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="Store" id="0om-hy-sNo"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="F5v-2t-72j" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1033" y="446"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="gwQ-hQ-HcM">
+            <objects>
+                <tabBarController id="4Kz-Gk-ieP" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="fDl-nO-c4t">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="y6R-Qf-b04" kind="relationship" relationship="viewControllers" id="OBn-no-iSj"/>
+                        <segue destination="JPw-wj-aV2" kind="relationship" relationship="viewControllers" id="hOX-u2-h4M"/>
+                        <segue destination="0hd-dq-WDl" kind="relationship" relationship="viewControllers" id="xPi-0g-eXa"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WOX-bX-BNA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="117" y="827"/>
         </scene>
     </scenes>
 </document>
