--- a/Store/Base.lproj/Main.storyboard
+++ b/Store/Base.lproj/Main.storyboard
@@ -33,11 +33,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="eoo-MG-jz1">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SettingCell" id="eoo-MG-jz1">
                                 <frame key="frameInset" minY="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="eoo-MG-jz1" id="jQ0-EQ-a0a">
-                                    <frame key="frameInset" width="375" height="43"/>
+                                    <frame key="frameInset" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -94,17 +94,17 @@
         <!--Store-->
         <scene sceneID="9L7-St-WJf">
             <objects>
-                <tableViewController id="JPw-wj-aV2" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="store" useStoryboardIdentifierAsRestorationIdentifier="YES" id="JPw-wj-aV2" customClass="StoreTableViewController" customModule="Store" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="cBd-Kk-3AO">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="s8t-QN-QZK">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="storeCell" id="s8t-QN-QZK">
                                 <frame key="frameInset" minY="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="s8t-QN-QZK" id="B8R-tO-ULX">
-                                    <frame key="frameInset" width="375" height="43"/>
+                                    <frame key="frameInset" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -130,8 +130,8 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="y6R-Qf-b04" kind="relationship" relationship="viewControllers" id="OBn-no-iSj"/>
                         <segue destination="JPw-wj-aV2" kind="relationship" relationship="viewControllers" id="hOX-u2-h4M"/>
+                        <segue destination="y6R-Qf-b04" kind="relationship" relationship="viewControllers" id="OBn-no-iSj"/>
                         <segue destination="0hd-dq-WDl" kind="relationship" relationship="viewControllers" id="xPi-0g-eXa"/>
                     </connections>
                 </tabBarController>
